# chrome-gnome-shell

./: .gitattributes  CMakeLists.txt  NEWS  README.md  README.ru.md  chrome-gnome-shell.doap  index.html  params.json
chrome-web-store/: en  pl  ru
connector/: chrome-gnome-shell.py  external_extension.json  gs-chrome-connector.py  io.github.ne0sight.gs_chrome_connector.json  org.gnome.chrome_gnome_shell.json  setup.py
connector/etc/chromium/native-messaging-hosts/: io.github.ne0sight.gs_chrome_connector.json
connector/etc/opt/chrome/native-messaging-hosts/: io.github.ne0sight.gs_chrome_connector.json
contrib/: README  chrome-messages2po.py  po2chrome-messages.py  translation-coverage.php
contrib/chrome-web-store/: OUTDATED  README  ca  de  en  es  fr  gd  hu  id  nl  pl  pt_BR  ru  sr  sv
contrib/ubuntu/: changelog  control  rules
debian/: changelog  control  copyright  docs
extension/: constants.js  content-script-end.js  content-script-start.js  extension.html  extension.js  gs-content-script-end.js  gs-content-script-start.js  gs-extension.js  gs-page-end.js  manifest.json  options.html  options.js
extension/_locales/ca/: messages.json
extension/_locales/de/: messages.json
extension/_locales/el/: messages.json
extension/_locales/en/: messages.json
extension/_locales/es/: messages.json
extension/_locales/fi/: messages.json
extension/_locales/fr/: messages.json
extension/_locales/gd/: messages.json
extension/_locales/hu/: messages.json
extension/_locales/id/: messages.json
extension/_locales/nl/: messages.json
extension/_locales/pl/: messages.json
extension/_locales/pt_BR/: messages.json
extension/_locales/pt_PT/: messages.json
extension/_locales/ru/: messages.json
extension/_locales/sl/: messages.json
extension/_locales/sr/: messages.json
extension/_locales/sv/: messages.json
extension/_locales/tr/: messages.json
extension/css/: options.css
extension/include/: constants.js  gsc.js  i18n.js  notifications.js  sweettooth-api.js  sync.js  update.js
po/: LINGUAS  README  ca.po  de.po  el.po  es.po  fi.po  fr.po  gd.po  hu.po  id.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  template.pot  tr.po
policies/: chrome-gnome-shell.json
